--- a/static/game.html
+++ b/static/game.html
@@ -107,7 +107,7 @@
 				                    y: y2
 				                });
 
-								var portal2_state = (vertical2 ? "vertical" : "horizontal");// + "_" + other_player_color;
+								var portal2_state = (vertical2 ? "vertical" : "horizontal") + "_" + other_player_color;
 
 								if(portal2_last != portal2_state){
 									if(portal2_last){
