--- a/static/game.html
+++ b/static/game.html
@@ -42,9 +42,11 @@
 			var vertical_portal2 = "";
 			var portal2_last;
 			var portalDirectionLast;
+			var animation_last;
 
 			var level = 1;
 			var animation = "still";
+			var justTraversed = false;
 
 			var width = 1245;
 			var height = 600;
