--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,10 @@
 <html>
     <head>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+        <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="js/static.js"></script>
-        <script type="text/javascript" src="js/crafty.js"></script>
-
 		<script type="text/javascript" src="js/jquery.reveal.js"></script>
-
 		<link href="css/screen.css" type="text/css" rel="stylesheet" />	
-		<link href="http://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans:400,700" rel="stylesheet" type="text/css">
-
+		<link href="css/font.css" type="text/css" rel="stylesheet">
         <title>Collaborative 2D Portal Game</title>
     </head>
     <body>
